[package]
name = "swaynoti"
version = "0.1.0"
edition = "2021"
description = "A modern Wayland notification daemon"
license = "MIT"
keywords = ["wayland", "notifications", "sway", "hyprland", "gtk"]
categories = ["gui"]

[[bin]]
name = "swaynoti"
path = "src/main.rs"

[[bin]]
name = "swaynotictl"
path = "src/bin/swaynotictl.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs", "macros", "signal"] }
async-channel = "2"
futures = "0.3"

# D-Bus (async, pure Rust)
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"

# GTK4 UI
gtk4 = { version = "0.9", features = ["v4_14"] }
gtk4-layer-shell = "0.4"

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Image handling
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
gdk-pixbuf = "0.20"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Notification history persistence
rusqlite = { version = "0.32", features = ["bundled"] }

# Sound (optional)
rodio = { version = "0.19", optional = true }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
once_cell = "1"
parking_lot = "0.12"
regex = "1"
shellexpand = "3"
serde_json = "1"
glib = "0.20"

[features]
default = []
sound = ["rodio"]

[dev-dependencies]
tempfile = "3"
